Name:                ahaskellcnorg
Version:             0.1
Synopsis:            haskellcn-community
Description:         A light weight forum
License:             AllRightsReserved
Author:              Haisheng,Wu
Maintainer:          freizl@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable ahaskellcnorg
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                         >= 4     && < 5,
    bytestring                   >= 0.9.1 && < 0.10,
    data-lens                    >= 2.0.1 && < 2.1,
    data-lens-template           >= 2.1   && < 2.2,
    heist                        >= 0.8   && < 0.9,
    MonadCatchIO-transformers    >= 0.2.1 && < 0.3,
    mtl                          >= 2     && < 3,
    snap        == 0.8.*,
    snap-core   == 0.8.*,
    snap-server == 0.8.*,
    xmlhtml     == 0.1.*,
    text                         >= 0.11  && < 0.12,
    time                         >= 1.1   && < 1.5,
    digestive-functors           >= 0.3   && < 0.4,
    digestive-functors-heist     >= 0.3   && < 0.4,
    digestive-functors-snap      >= 0.3   && < 0.4,
    mongoDB                      >= 1.2   && < 2.0,
    snaplet-mongodb-minimalistic >= 0.0.6 && < 0.0.7,
    snaplet-i18n                 >= 0.0.2 && < 0.1,
    configurator                 >= 0.2   && < 0.3,
    clientsession                >= 0.7.4 && < 0.8,
    resource-pool                >= 0.2   && < 0.3,
    unordered-containers         >= 0.1.4 && < 0.2,
    aeson                        >= 0.6   && < 0.7,
    bson                         >= 0.1.7 && < 0.2,
    containers                   >= 0.4   && < 0.5,
    compact-string-fix           >= 0.3   && < 0.4,
    stm                          >= 2.2   && < 3.0


  if flag(development)
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

