Name:                ahaskellcnorg
Version:             0.1
Synopsis:            haskellcn-community
Description:         A light weight forum
License:             AllRightsReserved
Author:              Haisheng,Wu
Maintainer:          freizl@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
tested-with:         GHC == 7.0.3


Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable ahaskellcnorg
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                        >= 0.6   && < 0.7,
    base                         >= 4     && < 5,
    bson                         >= 0.1.7 && < 0.2,
    bytestring                   >= 0.9.1 && < 0.10,
    clientsession                >= 0.7.4 && < 0.8,
    compact-string-fix           >= 0.3   && < 0.4,
    configurator                 >= 0.2   && < 0.3,
    containers                   >= 0.4   && < 0.5,
    data-lens                    >= 2.0.1 && < 2.1,
    data-lens-template           >= 2.1   && < 2.2,
    snaplet-environments         == 0.2,
    digestive-functors           >= 0.3   && < 0.4,
    digestive-functors-heist     >= 0.3   && < 0.4,
    digestive-functors-snap      >= 0.3   && < 0.4,
    heist                        >= 0.8   && < 0.9,
    MonadCatchIO-transformers    >= 0.2.1 && < 0.3,
    mongoDB                      >= 1.2   && < 2.0,
    mtl                          >= 2     && < 3,
    old-locale                   >= 1.0   && < 1.1,
    pandoc                       >= 1.9   && < 2.0,
    resource-pool                >= 0.2   && < 0.3,
    snap        == 0.8.*,
    snap-core   == 0.8.*,
    snap-server == 0.8.*,
    snaplet-i18n                 >= 0.0.2 && < 0.1,
    snaplet-mongodb-minimalistic >= 0.0.6 && < 0.0.7,
    text                         >= 0.11  && < 0.12,
    time                         >= 1.1   && < 1.5,
    -- unordered-containers may better to be >= 0.2 cause met problem at refresh build
    unordered-containers         >= 0.2 && < 0.3,
    utf8-string                  >= 0.3.7 && < 0.4,
    xmlhtml                      >= 0.1   && < 0.2


  if flag(development)
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
                   -fno-spec-constr-count
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans


Test-suite hcn-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is:        TestSuite.hs
  -- add src for dependency. MAYBE: any approach add compiled but src.
  Ghc-options:    -Wall -isrc
  Build-depends:
    HUnit                >= 1.2  && < 1.3,
    test-framework       >= 0.6  && < 0.7,
    test-framework-hunit >= 0.2  && < 0.3,
    -- Copied from regular dependencies:
    base                 >= 4    && < 5
