Name:                Snap-Web
Version:             0.2
Synopsis:            snap web
Description:         A light weight forum
License:             BSD3
license-file:        LICENSE
Author:              Haisheng,Wu
Maintainer:          freizl@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
tested-with:         GHC == 7.4.1
Homepage:            https://github.com/HaskellCNOrg/snap-web

Source-Repository head
  Type:     git
  Location: git://github.com/HaskellCNOrg/snap-web.git

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable snap-web
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    MonadCatchIO-transformers    >= 0.3   && < 0.4,
    aeson                        >= 0.6   && < 0.7,
    base                         >= 4     && < 5,
    blaze-builder                >= 0.3   && < 0.4,
    bson                         >= 0.1.7 && < 0.2.2,
    bytestring                   >= 0.9.1 && < 0.12,
    case-insensitive             >= 0.4.0.4 && < 0.5,
    clientsession                >= 0.7.4 && < 0.9,
    compact-string-fix           >= 0.3   && < 0.4,
    configurator                 >= 0.2   && < 0.3,
    containers                   >= 0.4   && < 0.6,
    lens         >= 3.7.0.1 && < 3.8,
    digestive-functors           == 0.5.*,
    digestive-functors-heist     >= 0.5   && < 0.6,
    digestive-functors-snap      >= 0.5   && < 0.6,
    heist                        >= 0.10   && < 0.11,
    mongoDB                      >= 1.3   && < 2.0,
    mtl                          >= 2     && < 3,
    old-locale                   >= 1.0   && < 1.1,
    pandoc                       >= 1.9,
    resource-pool                >= 0.2   && < 0.3,
    snap                         >= 0.10 && < 0.11,
    snap-core                    >= 0.9 && < 0.11,
    snap-loader-dynamic          >= 0.9 && < 0.11,
    snap-loader-static           >= 0.9 && < 0.11,
    snap-server                  >= 0.9 && < 0.11,
    snaplet-i18n                 >= 0.0.4 && < 0.0.5,
    snaplet-mongodb-minimalistic >= 0.0.6.6 && < 0.0.7,
    -- snaplet-oauth                >= 0.0.6 && < 0.0.7,
    text                         >= 0.11  && < 0.12,
    time                         >= 1.1   && < 1.5,
    unordered-containers         >= 0.2   && < 0.3,
    utf8-string                  >= 0.3.7 && < 0.4,
    xmlhtml                      >= 0.2   && < 0.3,
    regex-pcre-builtin           == 0.94.4.3.8.31,
    xss-sanitize                 >= 0.3   && < 0.4


  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
                   -fno-spec-constr-count
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans



Test-suite hcn-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is:        TestSuite.hs
  -- add src for dependency. MAYBE: any approach add compiled but src.
  Ghc-options:    -Wall -isrc
  Build-depends:
    HUnit                >= 1.2  && < 1.3,
    test-framework       >= 0.6  && < 0.7,
    test-framework-hunit >= 0.2  && < 0.3,
    -- Copied from regular dependencies:
    base                 >= 4    && < 5
