Name:                Snap-Web
Version:             0.3.0
Synopsis:            snap web
Description:         
  A light weight forum in Snapframework
  .
  Real world site using this application: http://a.haskellcn.org
  .

License:             BSD3
license-file:        LICENSE
Author:              Haisheng,Wu
Maintainer:          freizl@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10
tested-with:         GHC >= 7.4.1
Homepage:            https://github.com/HaskellCNOrg/snap-web

Source-Repository head
  Type:     git
  Location: git://github.com/HaskellCNOrg/snap-web.git

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable snap-web
  hs-source-dirs: src
  default-language:    Haskell2010
  main-is: Main.hs

  Build-depends:
    base                         >= 4     && < 5,

    MonadCatchIO-transformers    >= 0.3     && < 0.4,
    aeson                        >= 0.6     && < 0.7,
    bson                         >= 0.1.7   && < 0.2.2,
    bytestring                   >= 0.9.1   && < 0.12,
    case-insensitive             >= 0.4.0.4 && < 0.5,
    clientsession                >= 0.7.4   && < 1.0,
    compact-string-fix           >= 0.3     && < 0.4,
    configurator                 >= 0.2     && < 0.3,
    containers                   >= 0.4     && < 0.6,
    mtl                          >= 2       && < 3,
    old-locale                   >= 1.0     && < 1.1,
    pandoc                       >= 1.9,
    resource-pool                >= 0.2     && < 0.3,
    lens                         >= 3.7.0.1 && < 3.8,
    text                         >= 0.11    && < 1.2,
    time                         >= 1.1     && < 1.5,
    unordered-containers         >= 0.2.3.0 && < 0.3,
    utf8-string                  >= 0.3.7   && < 0.4,
    mongoDB                      >= 1.3     && < 2.0,

    snap-loader-dynamic          >= 0.9     && < 0.11,
    snap-loader-static           >= 0.9     && < 0.11,
    blaze-builder                >= 0.3.1.0 && < 0.4,
    digestive-functors           >= 0.5     && < 1.0,
    digestive-functors-heist     >= 0.5     && < 1.0,
    digestive-functors-snap      >= 0.5     && < 1.0,
    heist                        >= 0.10    && < 0.14,
    snap                         >= 0.10    && < 0.14,
    snap-core                    >= 0.9     && < 0.14,
    snap-server                  >= 0.9     && < 0.14,
    snaplet-i18n                 >= 0.0.5   && < 0.1,
    snaplet-mongodb-minimalistic >= 0.0.6.6 && < 0.0.7,
    xmlhtml                      >= 0.2     && < 0.3,
    xss-sanitize                 >= 0.3.3   && < 0.4,

    -- Workaround for failing to link at wider version
    attoparsec                   >= 0.10 && < 0.12

  cpp-options: -DTIMEZONE=CST
  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind -fno-spec-constr-count
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Test-suite hcn-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall -isrc
  Build-depends:
    HUnit                >= 1.2  && < 1.3,
    test-framework       >= 0.6  && < 0.7,
    test-framework-hunit >= 0.2  && < 0.3,
    -- Copied from regular dependencies:
    base                 >= 4    && < 5
