Name:                snap-web
Version:             0.3.1
Synopsis:            snap web
Description:         
  A light weight forum in Snapframework
  .
  Real world site using this application: http://a.haskellcn.org
  .

License:             BSD3
license-file:        LICENSE
Author:              Haisheng,Wu
Maintainer:          freizl@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10
tested-with:         GHC >= 7.4.1
Homepage:            https://github.com/HaskellCNOrg/snap-web

Source-Repository head
  Type:     git
  Location: git://github.com/HaskellCNOrg/snap-web.git

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable snap-web
  hs-source-dirs: src
  default-language:    Haskell2010
  main-is: Main.hs

  Build-depends:
      base                         >= 4     
    , MonadCatchIO-transformers    
    , aeson                        
    , bson                         
    , bytestring                   
    , case-insensitive             
    , clientsession                
    , compact-string-fix           
    , configurator                 
    , containers                   
    , mtl                          
    , old-locale                   
    , pandoc                       
    , resource-pool                
    , lens                         
    , text                         
    , time                         
    , unordered-containers         
    , utf8-string                  
    , mongoDB                      

    , snap-loader-dynamic          
    , snap-loader-static           
    , blaze-builder                
    , digestive-functors           
    , digestive-functors-heist     
    , digestive-functors-snap      
    , heist                        
    , snap                         
    , snap-core                    
    , snap-server                  
    , snaplet-i18n                 
    , snaplet-mongodb-minimalistic 
    , xmlhtml                      
    , xss-sanitize
    , monad-control                

    -- Workaround for failing to link at wider version
    --attoparsec                   

  cpp-options: -DTIMEZONE=CST
  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind -fno-spec-constr-count
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Test-suite hcn-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall -isrc
  Build-depends:
    base                 >= 4    && < 5
    , HUnit                
    , test-framework       
    , test-framework-hunit 
